--- a/emulator/index.html
+++ b/emulator/index.html
@@ -62,6 +62,18 @@
     if (str.endsWith("READY")) {
       emulator.screen_set_scale(0.5, 0.5);
       ready = true;
+
+      addChildWindow(5, "Button", "Button 1", 10, 10, 70, 20, 5);
+      addChildWindow(6, "Button", "Button 2", 10, 40, 70, 20, 6);
+      addChildWindow(7, "Button", "Button 3", 10, 70, 70, 20, 7);
+      addChildWindow(8, "Static", "Write below", 10, 100, 200, 200, 8);
+    }
+
+    const num = Number(str);
+    if (!isNaN(num)) {
+      document.getElementById("output").textContent = `Button ${
+        num - 5
+      } pressed`;
     }
   }
 
@@ -82,3 +94,12 @@
   <div style="white-space: pre; font: 14px monospace; line-height: 14px"></div>
   <canvas style="display: none"></canvas>
 </div>
+
+<div id="output"></div>
+
+<input type="text" id="input" />
+<script>
+  document
+    .getElementById("input")
+    .addEventListener("change", (e) => setWindowText(8, e.target.value));
+</script>
