--- a/emulator/index.html
+++ b/emulator/index.html
@@ -17,7 +17,8 @@
       wasm_path: "v86/v86.wasm",
       bios: { url: "v86/seabios.bin" },
       vga_bios: { url: "v86/vgabios.bin" },
-      hda: { url: "../test95/small.img" },
+      // hda: { url: "../test95/small.img" },
+      hda: { url: "../imgtool/os.img" },
       boot_order: 132,
       // memory_size: 32 * 1024 * 1024,
       disable_mouse: true,
