--- a/emulator/index.html
+++ b/emulator/index.html
@@ -3,104 +3,7 @@
   <meta charset="utf-8" />
 </head>
 
-<script src="v86/libv86.js"></script>
-<script>
-  let ready = false;
-
-  window.onload = () => {
-    const container = document.getElementById("screen_container");
-    const rect = container.getBoundingClientRect();
-
-    const emulator = new V86Starter({
-      screen_container: container,
-
-      wasm_path: "v86/v86.wasm",
-      bios: { url: "v86/seabios.bin" },
-      vga_bios: { url: "v86/vgabios.bin" },
-      // hda: { url: "../test95/small.img" },
-      hda: { url: "../imgtool/os.img" },
-      boot_order: 132,
-      // memory_size: 32 * 1024 * 1024,
-      disable_mouse: true,
-      // disable_keyboard: true,
-      autostart: true,
-      // log_level: 0x004000,
-    });
-
-    let mousePos = [0, 0];
-    setInterval(() => {
-      if (!ready) return;
-      emulator.serial0_send(`mp|${mousePos[0]}|${mousePos[1]}\r`);
-    }, 20);
-
-    container.addEventListener("mousemove", (e) => {
-      mousePos = [e.clientX - rect.x, e.clientY - rect.y];
-    });
-    container.addEventListener("mousedown", (e) => {
-      if (!ready) return;
-      emulator.serial0_send(`me|2\r`);
-    });
-    container.addEventListener("mouseup", (e) => {
-      if (!ready) return;
-      emulator.serial0_send(`me|4\r`);
-    });
-
-    let buffer = "";
-    emulator.add_listener("serial0-output-char", (char) => {
-      if (char !== "\r") {
-        buffer += char;
-      } else {
-        evaluateCommand(buffer);
-        buffer = "";
-      }
-    });
-
-    window.emulator = emulator;
-  };
-
-  function evaluateCommand(str) {
-    console.log(str);
-    if (str.endsWith("READY")) {
-      emulator.screen_set_scale(0.5, 0.5);
-      ready = true;
-
-      addChildWindow(5, "Button", "Button 1", 10, 10, 70, 20, 5);
-      addChildWindow(6, "Button", "Button 2", 10, 40, 70, 20, 6);
-      addChildWindow(7, "Button", "Button 3", 10, 70, 70, 20, 7);
-      addChildWindow(8, "Static", "Write below", 10, 100, 200, 200, 8);
-    }
-
-    const num = Number(str);
-    if (!isNaN(num)) {
-      document.getElementById("output").textContent = `Button ${
-        num - 5
-      } pressed`;
-    }
-  }
-
-  function setWindowSize(id, x, y, w, h) {
-    emulator.serial0_send(`setWSize|${id}|${x}|${y}|${w}|${h}\r`);
-  }
-  function addChildWindow(id, type, text, x, y, w, h, eventId) {
-    emulator.serial0_send(
-      `addChildW|${id}|${type}|${text}|${x}|${y}|${w}|${h}|${eventId}\r`
-    );
-  }
-  function setWindowText(id, text) {
-    emulator.serial0_send(`setWText|${id}|${text}\r`);
-  }
-</script>
-
-<div id="screen_container">
-  <div style="white-space: pre; font: 14px monospace; line-height: 14px"></div>
-  <canvas style="display: none"></canvas>
-</div>
-
-<div id="output"></div>
-
-<input type="text" id="input" />
-<script>
-  document
-    .getElementById("input")
-    .addEventListener("change", (e) => setWindowText(8, e.target.value));
-</script>
+<body>
+  <div id="root"></div>
+  <script type="module" src="./index.tsx"></script>
+</body>
